--- a/UpCycle/Podfile
+++ b/UpCycle/Podfile
@@ -6,6 +6,10 @@ target 'UpCycle' do
   use_frameworks!
 pod 'GoogleMaps'
 pod 'GooglePlaces'
-
+pod 'GooglePlacePicker'
+pod 'Firebase/Core'
+pod 'Firebase/Storage'
+pod 'Firebase/Database'
+pod 'Firebase/Auth'
 
 end
